增加正则化逻辑回归的代码

--- a/ex2/ML-Exercise2.ipynb
+++ b/ex2/ML-Exercise2.ipynb
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true,
     "pycharm": {
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 2,
    "metadata": {
     "pycharm": {
      "is_executing": false
@@ -70,7 +70,7 @@
      },
      "metadata": {},
      "output_type": "execute_result",
-     "execution_count": 99
+     "execution_count": 2
     }
    ],
    "source": [
@@ -88,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 3,
    "metadata": {
     "pycharm": {
      "is_executing": false
@@ -139,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 4,
    "metadata": {
     "collapsed": true,
     "pycharm": {
@@ -161,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 5,
    "metadata": {
     "pycharm": {
      "is_executing": false
@@ -198,7 +198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 6,
    "metadata": {
     "collapsed": true,
     "pycharm": {
@@ -225,7 +225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 7,
    "metadata": {
     "collapsed": true,
     "pycharm": {
@@ -257,7 +257,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 8,
    "metadata": {
     "pycharm": {
      "is_executing": false
@@ -270,7 +270,7 @@
      },
      "metadata": {},
      "output_type": "execute_result",
-     "execution_count": 105
+     "execution_count": 8
     }
    ],
    "source": [
@@ -279,7 +279,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 9,
    "metadata": {
     "pycharm": {
      "is_executing": false
@@ -292,7 +292,7 @@
      },
      "metadata": {},
      "output_type": "execute_result",
-     "execution_count": 106
+     "execution_count": 9
     }
    ],
    "source": [
@@ -308,7 +308,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 10,
    "metadata": {
     "pycharm": {
      "is_executing": false
@@ -321,7 +321,7 @@
      },
      "metadata": {},
      "output_type": "execute_result",
-     "execution_count": 107
+     "execution_count": 10
     }
    ],
    "source": [
@@ -347,7 +347,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 11,
    "metadata": {
     "collapsed": true,
     "pycharm": {
@@ -389,7 +389,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 12,
    "metadata": {
     "pycharm": {
      "is_executing": false
@@ -397,19 +397,12 @@
    },
    "outputs": [
     {
-     "name": "stdout",
-     "text": [
-      "[[0]\n [0]\n [0]\n [1]\n [1]\n [0]\n [1]\n [1]\n [1]\n [1]\n [0]\n [0]\n [1]\n [1]\n [0]\n [1]\n [1]\n [0]\n [1]\n [1]\n [0]\n [1]\n [0]\n [0]\n [1]\n [1]\n [1]\n [0]\n [0]\n [0]\n [1]\n [1]\n [0]\n [1]\n [0]\n [0]\n [0]\n [1]\n [0]\n [0]\n [1]\n [0]\n [1]\n [0]\n [0]\n [0]\n [1]\n [1]\n [1]\n [1]\n [1]\n [1]\n [1]\n [0]\n [0]\n [0]\n [1]\n [0]\n [1]\n [1]\n [1]\n [0]\n [0]\n [0]\n [0]\n [0]\n [1]\n [0]\n [1]\n [1]\n [0]\n [1]\n [1]\n [1]\n [1]\n [1]\n [1]\n [1]\n [0]\n [0]\n [1]\n [1]\n [1]\n [1]\n [1]\n [1]\n [0]\n [1]\n [1]\n [0]\n [1]\n [1]\n [0]\n [1]\n [1]\n [1]\n [1]\n [1]\n [1]\n [1]]\n"
-     ],
-     "output_type": "stream"
-    },
-    {
      "data": {
       "text/plain": "array([ -0.1       , -12.00921659, -11.26284221])"
      },
      "metadata": {},
      "output_type": "execute_result",
-     "execution_count": 109
+     "execution_count": 12
     }
    ],
    "source": [
@@ -425,7 +418,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 13,
    "metadata": {
     "pycharm": {
      "is_executing": false
@@ -438,7 +431,7 @@
      },
      "metadata": {},
      "output_type": "execute_result",
-     "execution_count": 110
+     "execution_count": 13
     }
    ],
    "source": [
@@ -456,7 +449,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 14,
    "metadata": {
     "pycharm": {
      "is_executing": false
@@ -469,7 +462,7 @@
      },
      "metadata": {},
      "output_type": "execute_result",
-     "execution_count": 111
+     "execution_count": 14
     }
    ],
    "source": [
@@ -490,7 +483,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 15,
    "metadata": {
     "collapsed": true,
     "pycharm": {
@@ -501,13 +494,12 @@
    "source": [
     "def predict(theta, X):\n",
     "    probability = sigmoid(X * theta.T)\n",
-    "    p\n",
     "    return [1 if x >= 0.5 else 0 for x in probability]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 16,
    "metadata": {
     "pycharm": {
      "is_executing": false
@@ -567,7 +559,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 17,
    "metadata": {
     "pycharm": {
      "is_executing": false
@@ -581,7 +573,7 @@
      },
      "metadata": {},
      "output_type": "execute_result",
-     "execution_count": 114
+     "execution_count": 17
     }
    ],
    "source": [
@@ -592,7 +584,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 18,
    "metadata": {
     "pycharm": {
      "is_executing": false
@@ -632,7 +624,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 19,
    "metadata": {
     "pycharm": {
      "is_executing": false
@@ -646,7 +638,7 @@
      },
      "metadata": {},
      "output_type": "execute_result",
-     "execution_count": 116
+     "execution_count": 19
     }
    ],
    "source": [
@@ -683,7 +675,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 20,
    "metadata": {
     "collapsed": true,
     "pycharm": {
@@ -692,7 +684,7 @@
    },
    "outputs": [],
    "source": [
-    "def cost(theta, X, y, learningRate):\n",
+    "def costReg(theta, X, y, learningRate):\n",
     "    theta = np.matrix(theta)\n",
     "    X = np.matrix(X)\n",
     "    y = np.matrix(y)\n",
@@ -728,7 +720,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 21,
    "metadata": {
     "collapsed": true,
     "pycharm": {
@@ -767,7 +759,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 22,
    "metadata": {
     "collapsed": true,
     "pycharm": {
@@ -796,7 +788,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 23,
    "metadata": {
     "collapsed": true,
     "pycharm": {
@@ -817,7 +809,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 24,
    "metadata": {
     "pycharm": {
      "is_executing": false
@@ -825,15 +817,12 @@
    },
    "outputs": [
     {
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-121-91e823124fc1>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mcostReg\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mtheta2\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mX2\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0my2\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mlearningRate\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      2\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'costReg' is not defined"
-     ],
-     "ename": "NameError",
-     "evalue": "name 'costReg' is not defined",
-     "output_type": "error"
+     "data": {
+      "text/plain": "0.6931471805599454"
+     },
+     "metadata": {},
+     "output_type": "execute_result",
+     "execution_count": 24
     }
    ],
    "source": [
@@ -842,13 +831,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {
     "pycharm": {
      "is_executing": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "array([0.00847458, 0.01878809, 0.05034464, 0.01150133, 0.01835599,\n       0.00732393, 0.00819244, 0.03934862, 0.00223924, 0.01286005,\n       0.00309594])"
+     },
+     "metadata": {},
+     "output_type": "execute_result",
+     "execution_count": 25
+    }
+   ],
    "source": [
     "gradientReg(theta2, X2, y2, learningRate)"
    ]
@@ -862,13 +860,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {
     "pycharm": {
      "is_executing": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "(array([ 0.53010249,  0.29075567, -1.60725764, -0.5821382 ,  0.01781027,\n        -0.21329508, -0.40024142, -1.37144139,  0.02264303, -0.9503358 ,\n         0.0344085 ]), 22, 1)"
+     },
+     "metadata": {},
+     "output_type": "execute_result",
+     "execution_count": 26
+    }
+   ],
    "source": [
     "result2 = opt.fmin_tnc(func=costReg, x0=theta2, fprime=gradientReg, args=(X2, y2, learningRate))\n",
     "result2"
@@ -883,15 +890,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {
     "pycharm": {
      "is_executing": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "text": [
+      "[[ 0.53010249  0.29075567 -1.60725764 -0.5821382   0.01781027 -0.21329508\n  -0.40024142 -1.37144139  0.02264303 -0.9503358   0.0344085 ]]\naccuracy = 78%\n"
+     ],
+     "output_type": "stream"
+    }
+   ],
    "source": [
     "theta_min = np.matrix(result2[0])\n",
+    "print(theta_min)\n",
     "predictions = predict(theta_min, X2)\n",
     "correct = [1 if ((a == 1 and b == 1) or (a == 0 and b == 0)) else 0 for (a, b) in zip(predictions, y2)]\n",
     "accuracy = (sum(map(int, correct)) % len(correct))\n",
@@ -907,13 +923,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {
     "pycharm": {
      "is_executing": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "text": [
+      "D:\\pycharm\\pro\\test\\venv\\lib\\site-packages\\sklearn\\linear_model\\logistic.py:432: FutureWarning: Default solver will be changed to 'lbfgs' in 0.22. Specify a solver to silence this warning.\n  FutureWarning)\n"
+     ],
+     "output_type": "stream"
+    },
+    {
+     "data": {
+      "text/plain": "LogisticRegression(C=1.0, class_weight=None, dual=False, fit_intercept=True,\n                   intercept_scaling=1, l1_ratio=None, max_iter=100,\n                   multi_class='warn', n_jobs=None, penalty='l2',\n                   random_state=None, solver='warn', tol=0.0001, verbose=0,\n                   warm_start=False)"
+     },
+     "metadata": {},
+     "output_type": "execute_result",
+     "execution_count": 28
+    }
+   ],
    "source": [
     "from sklearn import linear_model#调用sklearn的线性回归包\n",
     "model = linear_model.LogisticRegression(penalty='l2', C=1.0)\n",
@@ -922,13 +954,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {
     "pycharm": {
      "is_executing": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "0.6610169491525424"
+     },
+     "metadata": {},
+     "output_type": "execute_result",
+     "execution_count": 29
+    }
+   ],
    "source": [
     "model.score(X2, y2)"
    ]
@@ -949,7 +990,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {
     "collapsed": true,
     "pycharm": {
