--- a/ex2/mytest_LogisticRegression.ipynb
+++ b/ex2/mytest_LogisticRegression.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 729,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true,
     "pycharm": {
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 730,
+   "execution_count": 2,
    "outputs": [
     {
      "data": {
@@ -28,7 +28,7 @@
      },
      "metadata": {},
      "output_type": "execute_result",
-     "execution_count": 730
+     "execution_count": 2
     }
    ],
    "source": [
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 731,
+   "execution_count": 3,
    "outputs": [
     {
      "data": {
@@ -106,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 732,
+   "execution_count": 4,
    "outputs": [],
    "source": [
     "def sigmoid(x):\n",
@@ -134,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 733,
+   "execution_count": 5,
    "outputs": [],
    "source": [
     "def cost(theta, X, Y):\n",
@@ -171,7 +171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 734,
+   "execution_count": 6,
    "outputs": [],
    "source": [
     "# def gradient_decent(theta, alpha, X, Y, itera):\n",
@@ -217,7 +217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 735,
+   "execution_count": 7,
    "outputs": [],
    "source": [
     "data.insert(0, 'Ones', 1)\n",
@@ -252,18 +252,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 736,
+   "execution_count": 8,
    "outputs": [
+    {
+     "name": "stdout",
+     "text": [
+      "0.6931471805599453\n[[ -0.1        -12.00921659 -11.26284221]]\n"
+     ],
+     "output_type": "stream"
+    },
     {
      "data": {
       "text/plain": "0.20349770158947467"
      },
      "metadata": {},
      "output_type": "execute_result",
-     "execution_count": 736
+     "execution_count": 8
     }
    ],
    "source": [
+    "print(cost(theta, X, Y))\n",
+    "print(gradient(theta, X, Y))\n",
     "result = opt.fmin_tnc(func=cost, x0=theta, fprime=gradient, args=(X, Y))\n",
     "# res = opt.minimize(fun=cost, x0=theta, args=(X, Y), method='Newton-CG', jac=gradient)\n",
     "cost(result[0], X, Y)\n"
@@ -290,7 +299,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 737,
+   "execution_count": 9,
    "outputs": [],
    "source": [
     "def predict(theta, X, Y):\n",
@@ -312,7 +321,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 738,
+   "execution_count": 10,
    "outputs": [
     {
      "name": "stdout",
@@ -347,7 +356,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 739,
+   "execution_count": 11,
    "outputs": [
     {
      "name": "stdout",
