修改了一些错误

--- a/ex2/mytest_LogisticRegression.ipynb
+++ b/ex2/mytest_LogisticRegression.ipynb
@@ -34,7 +34,7 @@
    "source": [
     "path = 'ex2data1.txt'\n",
     "data = pd.read_csv(path, header=None, names=['Exam1 score', 'Exam2 score', 'result'])\n",
-    "data.head()\n"
+    "data.head()"
    ],
    "metadata": {
     "collapsed": false,
