完成推荐系统部分的编写

--- a/ex8-anomaly detection and recommendation/2- Recommender system.ipynb
+++ b/ex8-anomaly detection and recommendation/2- Recommender system.ipynb
@@ -11,9 +11,27 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "pycharm": {
+     "is_executing": false
+    }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-1-0ff60cf5d4d6>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mmatplotlib\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mpyplot\u001b[0m \u001b[1;32mas\u001b[0m \u001b[0mplt\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      2\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mseaborn\u001b[0m \u001b[1;32mas\u001b[0m \u001b[0msns\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 3\u001b[1;33m \u001b[0msns\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mset\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mcontext\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;34m\"notebook\"\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mstyle\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;34m\"white\"\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mpalette\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0msns\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mcolor_palette\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"RdBu\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      4\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mnumpy\u001b[0m \u001b[1;32mas\u001b[0m \u001b[0mnp\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      5\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mpandas\u001b[0m \u001b[1;32mas\u001b[0m \u001b[0mpd\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32mD:\\pycharm\\pro\\test\\venv\\lib\\site-packages\\seaborn\\rcmod.py\u001b[0m in \u001b[0;36mset\u001b[1;34m(context, style, palette, font, font_scale, color_codes, rc)\u001b[0m\n\u001b[0;32m    119\u001b[0m     \u001b[0mset_context\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mcontext\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mfont_scale\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    120\u001b[0m     \u001b[0mset_style\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mstyle\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mrc\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;33m{\u001b[0m\u001b[1;34m\"font.family\"\u001b[0m\u001b[1;33m:\u001b[0m \u001b[0mfont\u001b[0m\u001b[1;33m}\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 121\u001b[1;33m     \u001b[0mset_palette\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mpalette\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mcolor_codes\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mcolor_codes\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    122\u001b[0m     \u001b[1;32mif\u001b[0m \u001b[0mrc\u001b[0m \u001b[1;32mis\u001b[0m \u001b[1;32mnot\u001b[0m \u001b[1;32mNone\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    123\u001b[0m         \u001b[0mmpl\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mrcParams\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mupdate\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mrc\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32mD:\\pycharm\\pro\\test\\venv\\lib\\site-packages\\seaborn\\rcmod.py\u001b[0m in \u001b[0;36mset_palette\u001b[1;34m(palette, n_colors, desat, color_codes)\u001b[0m\n\u001b[0;32m    547\u001b[0m     \u001b[1;32mif\u001b[0m \u001b[0mcolor_codes\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    548\u001b[0m         \u001b[1;32mtry\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 549\u001b[1;33m             \u001b[0mpalettes\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mset_color_codes\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mpalette\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    550\u001b[0m         \u001b[1;32mexcept\u001b[0m \u001b[0mValueError\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    551\u001b[0m             \u001b[1;32mpass\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32mD:\\pycharm\\pro\\test\\venv\\lib\\site-packages\\seaborn\\palettes.py\u001b[0m in \u001b[0;36mset_color_codes\u001b[1;34m(palette)\u001b[0m\n\u001b[0;32m   1068\u001b[0m         colors = [(0., 0., 1.), (0., .5, 0.), (1., 0., 0.), (.75, .75, 0.),\n\u001b[0;32m   1069\u001b[0m                   (.75, .75, 0.), (0., .75, .75), (0., 0., 0.)]\n\u001b[1;32m-> 1070\u001b[1;33m     \u001b[1;32melif\u001b[0m \u001b[0mpalette\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mSEABORN_PALETTES\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m   1071\u001b[0m         \u001b[1;32mif\u001b[0m \u001b[1;32mnot\u001b[0m \u001b[0mpalette\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mendswith\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"6\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   1072\u001b[0m             \u001b[0mpalette\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mpalette\u001b[0m \u001b[1;33m+\u001b[0m \u001b[1;34m\"6\"\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mTypeError\u001b[0m: unhashable type: '_ColorPalette'"
+     ],
+     "ename": "TypeError",
+     "evalue": "unhashable type: '_ColorPalette'",
+     "output_type": "error"
+    }
+   ],
    "source": [
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
@@ -43,20 +61,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "((1682, 943), (1682, 943))"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
+   "execution_count": null,
+   "metadata": {
+    "pycharm": {
+     "is_executing": false
     }
-   ],
+   },
+   "outputs": [],
    "source": [
     "movies_mat = sio.loadmat('./data/ex8_movies.mat')\n",
     "Y, R = movies_mat.get('Y'), movies_mat.get('R')\n",
@@ -66,9 +77,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "pycharm": {
+     "is_executing": false
+    }
    },
    "outputs": [],
    "source": [
@@ -81,20 +95,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "((943, 10), (1682, 10))"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
+   "execution_count": null,
+   "metadata": {
+    "pycharm": {
+     "is_executing": false
     }
-   ],
+   },
+   "outputs": [],
    "source": [
     "param_mat = sio.loadmat('./data/ex8_movieParams.mat')\n",
     "theta, X = param_mat.get('Theta'), param_mat.get('X')\n",
@@ -112,9 +119,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "pycharm": {
+     "is_executing": false
+    }
    },
    "outputs": [],
    "source": [
@@ -183,20 +193,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "22.224603725685675"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
+   "execution_count": null,
+   "metadata": {
+    "pycharm": {
+     "is_executing": false
     }
-   ],
+   },
+   "outputs": [],
    "source": [
     "# use subset of data to calculate the cost as in pdf...\n",
     "users = 4\n",
@@ -214,20 +217,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "27918.64012454421"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
+   "execution_count": null,
+   "metadata": {
+    "pycharm": {
+     "is_executing": false
     }
-   ],
+   },
+   "outputs": [],
    "source": [
     "param = serialize(X, theta)  # total real params\n",
     "\n",
@@ -246,9 +242,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "pycharm": {
+     "is_executing": false
+    }
    },
    "outputs": [],
    "source": [
@@ -267,9 +266,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "pycharm": {
+     "is_executing": false
+    }
    },
    "outputs": [],
    "source": [
@@ -286,20 +288,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "31.344056244274221"
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
+   "execution_count": null,
+   "metadata": {
+    "pycharm": {
+     "is_executing": false
     }
-   ],
+   },
+   "outputs": [],
    "source": [
     "# in the ex8_confi.m, lambda = 1.5, and it's using sub data set\n",
     "regularized_cost(param_sub, Y_sub, R_sub, features, l=1.5)"
@@ -307,20 +302,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "32520.682450229557"
-      ]
-     },
-     "execution_count": 13,
-     "metadata": {},
-     "output_type": "execute_result"
+   "execution_count": null,
+   "metadata": {
+    "pycharm": {
+     "is_executing": false
     }
-   ],
+   },
+   "outputs": [],
    "source": [
     "regularized_cost(param, Y, R, 10, l=1)  # total regularized cost"
    ]
@@ -341,9 +329,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "pycharm": {
+     "is_executing": false
+    }
    },
    "outputs": [],
    "source": [
@@ -365,9 +356,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "pycharm": {
+     "is_executing": false
+    }
    },
    "outputs": [],
    "source": [
@@ -378,7 +372,8 @@
     "        tokens = line.strip().split(' ')\n",
     "        movie_list.append(' '.join(tokens[1:]))\n",
     "\n",
-    "movie_list = np.array(movie_list)"
+    "movie_list = np.array(movie_list)\n",
+    "print(movie_list)"
    ]
   },
   {
@@ -390,9 +385,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "pycharm": {
+     "is_executing": false
+    }
    },
    "outputs": [],
    "source": [
@@ -420,20 +418,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(1682, 944)"
-      ]
-     },
-     "execution_count": 17,
-     "metadata": {},
-     "output_type": "execute_result"
+   "execution_count": null,
+   "metadata": {
+    "pycharm": {
+     "is_executing": false
     }
-   ],
+   },
+   "outputs": [],
    "source": [
     "Y, R = movies_mat.get('Y'), movies_mat.get('R')\n",
     "\n",
@@ -444,20 +435,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(1682, 944)"
-      ]
-     },
-     "execution_count": 18,
-     "metadata": {},
-     "output_type": "execute_result"
+   "execution_count": null,
+   "metadata": {
+    "pycharm": {
+     "is_executing": false
     }
-   ],
+   },
+   "outputs": [],
    "source": [
     "R = np.insert(R, 0, ratings != 0, axis=1)\n",
     "R.shape"
@@ -465,9 +449,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "pycharm": {
+     "is_executing": false
+    }
    },
    "outputs": [],
    "source": [
@@ -478,20 +465,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "((1682, 50), (944, 50))"
-      ]
-     },
-     "execution_count": 20,
-     "metadata": {},
-     "output_type": "execute_result"
+   "execution_count": null,
+   "metadata": {
+    "pycharm": {
+     "is_executing": false
     }
-   ],
+   },
+   "outputs": [],
    "source": [
     "X = np.random.standard_normal((n_movie, n_features))\n",
     "theta = np.random.standard_normal((n_user, n_features))\n",
@@ -501,9 +481,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "pycharm": {
+     "is_executing": false
+    }
    },
    "outputs": [],
    "source": [
@@ -519,20 +502,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "4.6862111343939375e-17"
-      ]
-     },
-     "execution_count": 22,
-     "metadata": {},
-     "output_type": "execute_result"
+   "execution_count": null,
+   "metadata": {
+    "pycharm": {
+     "is_executing": false
     }
-   ],
+   },
+   "outputs": [],
    "source": [
     "Y_norm = Y - Y.mean()\n",
     "Y_norm.mean()"
@@ -547,9 +523,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "pycharm": {
+     "is_executing": false
+    }
    },
    "outputs": [],
    "source": [
@@ -558,9 +537,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "pycharm": {
+     "is_executing": false
+    }
    },
    "outputs": [],
    "source": [
@@ -574,49 +556,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "     fun: 64721.497815072536\n",
-       "     jac: array([ -1.35092039e-07,  -5.05980486e-08,  -7.61559766e-08, ...,\n",
-       "        -2.97811034e-07,  -8.12815282e-08,  -1.47592943e-07])\n",
-       " message: 'Converged (|f_n-f_(n-1)| ~= 0)'\n",
-       "    nfev: 2300\n",
-       "     nit: 74\n",
-       "  status: 1\n",
-       " success: True\n",
-       "       x: array([ 0.152063  ,  0.05385871,  0.10072402, ..., -0.47800815,\n",
-       "        0.19233806,  0.18563834])"
-      ]
-     },
-     "execution_count": 27,
-     "metadata": {},
-     "output_type": "execute_result"
+   "execution_count": null,
+   "metadata": {
+    "pycharm": {
+     "is_executing": false
     }
-   ],
+   },
+   "outputs": [],
    "source": [
     "res"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "((1682, 50), (944, 50))"
-      ]
-     },
-     "execution_count": 29,
-     "metadata": {},
-     "output_type": "execute_result"
+   "execution_count": null,
+   "metadata": {
+    "pycharm": {
+     "is_executing": false
     }
-   ],
+   },
+   "outputs": [],
    "source": [
     "X_trained, theta_trained = deserialize(res.x, n_movie, n_user, n_features)\n",
     "X_trained.shape, theta_trained.shape"
@@ -624,9 +583,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "pycharm": {
+     "is_executing": false
+    }
    },
    "outputs": [],
    "source": [
@@ -635,9 +597,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "pycharm": {
+     "is_executing": false
+    }
    },
    "outputs": [],
    "source": [
@@ -646,20 +611,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(1682,)"
-      ]
-     },
-     "execution_count": 32,
-     "metadata": {},
-     "output_type": "execute_result"
+   "execution_count": null,
+   "metadata": {
+    "pycharm": {
+     "is_executing": false
     }
-   ],
+   },
+   "outputs": [],
    "source": [
     "idx = np.argsort(my_preds)[::-1]  # Descending order\n",
     "idx.shape"
@@ -667,21 +625,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([ 4.12534012,  4.04415049,  3.99324638,  3.91902741,  3.81691636,\n",
-       "        3.81556276,  3.76602832,  3.76323164,  3.75906029,  3.75076642])"
-      ]
-     },
-     "execution_count": 33,
-     "metadata": {},
-     "output_type": "execute_result"
+   "execution_count": null,
+   "metadata": {
+    "pycharm": {
+     "is_executing": false
     }
-   ],
+   },
+   "outputs": [],
    "source": [
     "# top ten idx\n",
     "my_preds[idx][:10]"
@@ -689,26 +639,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Titanic (1997)\n",
-      "Star Wars (1977)\n",
-      "Shawshank Redemption, The (1994)\n",
-      "Forrest Gump (1994)\n",
-      "Raiders of the Lost Ark (1981)\n",
-      "Braveheart (1995)\n",
-      "Return of the Jedi (1983)\n",
-      "Usual Suspects, The (1995)\n",
-      "Godfather, The (1972)\n",
-      "Schindler's List (1993)\n"
-     ]
+   "execution_count": null,
+   "metadata": {
+    "pycharm": {
+     "is_executing": false
     }
-   ],
+   },
+   "outputs": [],
    "source": [
     "for m in movie_list[idx][:10]:\n",
     "    print(m)"
@@ -718,7 +655,10 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "pycharm": {
+     "is_executing": false
+    }
    },
    "outputs": [],
    "source": []
@@ -742,6 +682,15 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.6.4"
+  },
+  "pycharm": {
+   "stem_cell": {
+    "cell_type": "raw",
+    "source": [],
+    "metadata": {
+     "collapsed": false
+    }
+   }
   }
  },
  "nbformat": 4,
